--- a/app/views/pages/_home_signed_out.html.erb
+++ b/app/views/pages/_home_signed_out.html.erb
@@ -3,7 +3,9 @@
 	
 	
 
-	var tweetauthor  = tweet_author(vote, author);
+	//var tweetauthor  = tweet_author(vote, author);
+	var tweetauthor = author
+
 
 	if (tweetauthor == vote) {
 		$('#votes-for-'+id).html("<span style='color:green'>You correctly identified the author as a " + return_name(tweetauthor) + "</span>");
@@ -77,13 +79,13 @@
 								<span class="tweeted-on">Tweeted 3 minutes ago</span>
 								<span class="tweeted-as">Teacher</span>
 							</div>
-							<div class="tweeted-content">great class today - i think they've cracked and seem happier with the project for this term</div>
+							<div class="tweeted-content">The great Alan Turing commented that 'machines take me by surprise with great frequency'. Might we ever surprise the machines? </div>
 							<div id="votes-for-1" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(1, 2, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(1, 2, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(1, 2, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(1, 2, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(1, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(1, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(1, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(1, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>  
 						  </div>
 						</div>
@@ -95,7 +97,7 @@
 								<span class="tweeted-as">Student</span>
 
 							</div>
-							<div class="tweeted-content">anyone for macadeeeee's later?</div>
+							<div class="tweeted-content">Fixing the Brain With Computers</div>
 						  	<div id="votes-for-2" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
 							    <a onclick="process_vote(2, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
@@ -109,19 +111,36 @@
 						  <div class="micropost">
 						    <div>
 								<span class="tweeted-on">Tweeted 23 minutes ago</span>
-								<span class="tweeted-as">Teacher</span>
+								<span class="tweeted-as">Student</span>
 
 							</div>
-							<div class="tweeted-content">Where do you take computing students on a school trip?! any ideas?</div>
+							<div class="tweeted-content">Just found out 67 million kids in the world still lack a basic education. Suddenly moaning about homework seems a bit pointless.</div>
 						  	<div id="votes-for-3" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(3, 2, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(3, 2, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(3, 2, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(3, 2, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(3, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(3, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(3, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(3, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>
 							</div>
 						</div>
+							<div class="stream-item">
+							  <div class="micropost">
+							    <div>
+									<span class="tweeted-on">Tweeted 1 hour ago</span>
+									<span class="tweeted-as">Celebrity</span>
+
+								</div>
+								<div class="tweeted-content">Searching for some top verbal humour to use to prove I'm not a machine pretending to be a celebrity.</div>
+							  	<div id="votes-for-5" style=" padding:10px 0px 0px 0px">
+								  <span style="float:left">Who is the author of this tweet?</span>
+								    <a onclick="process_vote(5, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+								    <a onclick="process_vote(5, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+									<a onclick="process_vote(5, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+								    <a onclick="process_vote(5, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+								</div>
+							</div>
+							</div>
 						<div class="stream-item">
 						  <div class="micropost">
 						    <div>
@@ -129,32 +148,33 @@
 								<span class="tweeted-as">Student</span>
 
 							</div>
-							<div class="tweeted-content">looking forward to Tracey Beaker after school - i know its kids stuff but its still cool</div>
+							<div class="tweeted-content">I am delighted to be involved in this experimental celebration of Turings legacy. A great man, badly treated.</div>
 							<div id="votes-for-4" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(4, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(4, 1, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(4, 1, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(4, 1, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(4, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(4, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(4, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(4, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div> 
 						 </div>
 						</div>
+					
 						<div class="stream-item">
 						  <div class="micropost">
 						    <div>
-								<span class="tweeted-on">Tweeted 1 hour ago</span>
-								<span class="tweeted-as">Celebrity</span>
+								<span class="tweeted-on">Tweeted 2 hours ago</span>
+								<span class="tweeted-as">Twitbot</span>
 
 							</div>
-							<div class="tweeted-content">The Golden Globes are just not glam enough - stop trying to be smart Hollywood and show us your money!</div>
-						  	<div id="votes-for-5" style=" padding:10px 0px 0px 0px">
+							<div class="tweeted-content">The game may perhaps be criticised on the ground that the odds are weighted too heavily against the machine.</div>
+						 	<div id="votes-for-10" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(5, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(5, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(5, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(5, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(10, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(10, 1, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(10, 1, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(10, 1, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>
-						</div>
+						 </div>
 						</div>
 						<div class="stream-item">
 						  <div class="micropost">
@@ -163,13 +183,13 @@
 								<span class="tweeted-as">Teacher</span>
 
 							</div>
-							<div class="tweeted-content">excited about this new project, let's see who can spot the fakers!</div>
+							<div class="tweeted-content">So much to learn, so much technology to master..Noble Causes, Techniques to master, I will press on...</div>
 						 	<div id="votes-for-6" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(6, 2, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(6, 2, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(6, 2, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(6, 2, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(6, 4, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(6, 4, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(6, 4, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(6, 4, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>
 						 </div>
 						</div>
@@ -180,7 +200,7 @@
 								<span class="tweeted-as">Twitbot</span>
 
 							</div>
-							<div class="tweeted-content">bike chain fell off again, gotta get it sorted, oil all over hands again</div>
+							<div class="tweeted-content">A natural consequence of doing so is that one then assumes that there is no virtue in the mere working out of consequences from data.</div>
 						  	<div id="votes-for-7" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
 							    <a onclick="process_vote(7, 4, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
@@ -197,16 +217,67 @@
 								<span class="tweeted-as">Student</span>
 
 							</div>
-							<div class="tweeted-content">OMG that rain was so heavy - totally soaked through</div>
+							<div class="tweeted-content">I have no doubt that United have every chance of winning the premier league we just gotta win all our games and thrash city in april !</div>
 						  	<div id="votes-for-8" style=" padding:10px 0px 0px 0px">
 							  <span style="float:left">Who is the author of this tweet?</span>
-							    <a onclick="process_vote(8, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
-							    <a onclick="process_vote(8, 1, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
-								<a onclick="process_vote(8, 1, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
-							    <a onclick="process_vote(8, 1, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							    <a onclick="process_vote(8, 4, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(8, 4, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(8, 4, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(8, 4, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
 							</div>
 						</div>
 						</div>
+						<div class="stream-item">
+						  <div class="micropost">
+						    <div>
+								<span class="tweeted-on">Tweeted 4 hours ago</span>
+								<span class="tweeted-as">Teacher</span>
+
+							</div>
+							<div class="tweeted-content">Manatees (family Trichechidae, genus Trichechus) are large, fully aquatic, mostly herbivorous marine mammals sometimes known as sea cows</div>
+						  	<div id="votes-for-9" style=" padding:10px 0px 0px 0px">
+							  <span style="float:left">Who is the author of this tweet?</span>
+							    <a onclick="process_vote(9, 1, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+							    <a onclick="process_vote(9, 1, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+								<a onclick="process_vote(9, 1, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+							    <a onclick="process_vote(9, 1, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+							</div>
+						</div>
+						</div>
+							<div class="stream-item">
+							  <div class="micropost">
+							    <div>
+									<span class="tweeted-on">Tweeted 4 hours ago</span>
+									<span class="tweeted-as">Student</span>
+
+								</div>
+								<div class="tweeted-content">An original idea. That can't be too hard. The library must be full of them.</div>
+							  	<div id="votes-for-11" style=" padding:10px 0px 0px 0px">
+								  <span style="float:left">Who is the author of this tweet?</span>
+								    <a onclick="process_vote(11, 2, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+								    <a onclick="process_vote(11, 2, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+									<a onclick="process_vote(11, 2, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+								    <a onclick="process_vote(11, 2, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+								</div>
+							</div>
+							</div>
+								<div class="stream-item">
+								  <div class="micropost">
+								    <div>
+										<span class="tweeted-on">Tweeted 4 hours ago</span>
+										<span class="tweeted-as">Celebrity</span>
+
+									</div>
+									<div class="tweeted-content">Speculating on whether certain tweets contain Turing-esque cryptographic messages.</div>
+								  	<div id="votes-for-12" style=" padding:10px 0px 0px 0px">
+									  <span style="float:left">Who is the author of this tweet?</span>
+									    <a onclick="process_vote(12, 3, 1)" style="padding-left: 10px;" class="button_to_link">Student</a>
+									    <a onclick="process_vote(12, 3, 2)" style="padding-left: 10px;" class="button_to_link">Teacher</a>
+										<a onclick="process_vote(12, 3, 3)" style="padding-left: 10px;" class="button_to_link">Celebrity</a>
+									    <a onclick="process_vote(12, 3, 4)" style="padding-left: 10px;" class="button_to_link">Twitbot</a>
+									</div>
+								</div>
+								</div>
 	</div>
   </div>
 </div>
